--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="signInDiv">
         <h1>Sign in</h1>
+        <h3 id="details">user name: abcd , password: 1234</h3>
         <input class = 'signInInp' type="text" id="username" placeholder="Enter username">
         <div id="underuser" class = 'note'></div>
         
