--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </div>
     <div id = 'board'></div>
     <div id="watch">00:00:00</div>
-    <script src="sudokuScript.js"> </script>
+   <audio  id="backGroundSong" autoplay controls src="Jane Street - TrackTribe.mp3"></audio>
+   <h3 id="h3Song">You can play a background music if you want</h3>
+   <script src="sudokuScript.js"> </script>
 </body>
 
 </html>
